--- a/index/index.css
+++ b/index/index.css
@@ -153,6 +153,13 @@ body {
     text-shadow: -2px 2px 0px #000;
 }
 
+#nav:checked ~ .nav_list-wrapper .nav_list {
+    display: flex;
+    flex-direction: column; 
+    height: 100vh;
+    width: 100%;
+}
+
 #nav:checked ~ .nav_list-wrapper .nav_list .nav_list-items .list_item-link {
     opacity: 1;
     display: block;
@@ -184,17 +191,8 @@ body {
 @media only screen and (max-width: 950px) {
     .nav_list-wrapper {
         left: 0;
-        width: 100%;
-        height: 100%;
         transition: all 0.3s ease;
         z-index: -1;
-    }
-
-    .nav_list {
-        display: flex;
-        flex-direction: column;  
-        height: 100vh;
-        width: 100%;
     }
 
     .nav_list-items:first-child {
@@ -347,11 +345,6 @@ body {
     transition: .3s;
 }
 
-/* .button:hover {
-    color: #fff;
-    background-color: #e26f6f;
-    border: 1px solid #e26f6f;
-} */
 
 @media only screen and (max-width: 1980px) and (max-height: 1100px) {
     .main_header {
@@ -359,11 +352,11 @@ body {
     }
     
     .header_title {
-        font-size: 6em;
+        font-size: 7em;
     }
 
     .header_description {
-        font-size: 1em;
+        font-size: 1.5em;
         margin-top: 2.5em;
     }
 
@@ -384,13 +377,13 @@ body {
     }
 
     .header_description {
-        font-size: 1em;
+        font-size: 1.25em;
     }
 }
 
 @media only screen and (max-width: 640px) {
     .header_title {
-        font-size: 4em;
+        font-size: 5em;
     }
 
     .header_title::after {
@@ -398,7 +391,7 @@ body {
     }
 
     .header_description {
-        font-size: .9em;
+        font-size: 1em;
     }
 }
 
@@ -409,7 +402,7 @@ body {
     }
 
     .header_description {
-        font-size: .85em;
+        font-size: .95em;
     }
 }
 
@@ -420,7 +413,13 @@ body {
     }
 
     .header_description {
-        font-size: .80em;
+        font-size: .90em;
+    }
+}
+
+@media only screen and (max-width: 340px) {
+    .button {
+        font-size: 1em;
     }
 }
 
@@ -557,11 +556,11 @@ body {
     background: linear-gradient(to bottom, rgba(72, 76, 97, 0) 0%, rgba(72, 76, 97, 0.9) 75%);
 }
 
-.post_overlay-content {
+.article_post:hover .post_overlay {
     display: flex;
     flex-direction: column;
     align-items: center;
-    height: auto;
+    padding: 12% 10%;
 }
 
 .post_heading {
@@ -576,13 +575,6 @@ body {
     align-self :center;
     margin-bottom: 20px;
 }
-
-.article_post:hover .post_overlay {
-    display: flex;
-    align-items: center;
-    padding: 12% 10%;
-}
-
 
 @media only screen and (max-width: 2222px) {
     .article_section {
@@ -614,6 +606,100 @@ body {
     .article_section {
         margin: 5% 2%;
     }
+}
+
+@media only screen and (max-width: 1050px) {
+    .article_link {
+        text-decoration: none;
+    }
+
+    .post_overlay {
+        display: block;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        position: relative;
+        height: 305px;
+        width: fit-content;
+        padding: 12% 10%;
+    }
+
+    .article_post:hover {
+        transform: none;
+    }
+    
+    .post_heading {
+        text-shadow: -2px 2px 2px #888;
+    }
+
+    .post_description {
+        text-shadow: -2px 2px 2px #999;
+    }
+
+}
+
+@media only screen and (max-width: 868px) {
+    .article_post {
+        height: 325px;
+        width: 350px;
+    }
+
+    .post_overlay {
+        height: 230px;
+        width: 270px;
+    }
+
+    .post_heading {
+        font-size: 1em;
+        align-self: center;
+        margin-bottom: 0.438em;
+    }
+    
+    .post_description {
+        font-size: .9em;
+        text-align: center;
+        align-self :center;
+        margin-bottom: 20px;
+    }
+
+}
+
+
+@media only screen and (max-width: 500px) {
+    .article_section {
+        margin: 3% 1%;
+    }
+}
+
+@media only screen and (max-width: 450px) {
+    .article_post {
+        height: 275px;
+        width: 300px;
+    }
+
+    .article_link {
+        height: 227px;
+        width: 200px;
+    }
+
+    .post_overlay {
+        height: 227px;
+        width: 260px;
+    }
+
+    .post_heading {
+        font-size: .9em;
+        align-self: center;
+        margin-bottom: 0.438em;
+    }
+    
+    .post_description {
+        font-size: .8em;
+        text-align: center;
+        align-self :center;
+        margin-bottom: 20px;
+    }
+
 }
 
 /* Section Two and Video Styles  ------------------------------------------------  */
@@ -954,3 +1040,9 @@ body {
     font-size: 75%;
     opacity: 0.7;
 }
+
+@media only screen and (max-width: 1100px) {
+    .main_footer {
+        padding: 5% 0;
+    }
+ }
