--- a/activities/activities.css
+++ b/activities/activities.css
@@ -29,16 +29,6 @@ body {
     background-color: rgba(241, 237, 237, .6);
 }
 
-.background-image {
-    background-color: #fff;
-    height: 65vh;
-    width: 100%;
-    background-position: bottom;
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-}
-
 /* Nav and logo wrapper styles ------------------------------------------------ */
 
 .main_nav {
@@ -265,7 +255,7 @@ body {
 .main_header {
     width: 85%;
     position: absolute;
-    top: 50vh;
+    top: 30vh;
     left: 50%;
     transform: translate(-50%, -50%);
 }
@@ -307,7 +297,7 @@ body {
 
 
 .section_labels {
-    margin-top: 18%;
+    margin-top: 30vh;
 }
 
 .section_title {
@@ -335,4 +325,53 @@ body {
     color: #555;
     text-align: center;
     margin-bottom: 2%;
+}
+
+/* Section Two and Video Styles  ------------------------------------------------  */
+
+.destination_post {
+    margin-top: 20vh;
+}
+
+.video_content-wrapper {
+    display: flex;
+    height:50vh;
+}
+
+.vid_content {
+    background: url('/assets/images/hero-image2.jpg');
+    background-position: b;
+    background-size: cover;
+    background-repeat: no-repeat;
+    width: 100%;
+}
+
+.video_link {
+    color: #fff;
+    font-family: "Cambay";
+    font-size: 3em;
+    font-weight: 800;
+    letter-spacing: 1px;
+    text-shadow: -2px 2px 1px #777;
+    text-decoration: none;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 99;
+}
+
+/* content in video section Styles  ------------------------------------------------  */
+
+.content_right-wrapper {
+    width: 100%;
+    background-color: #2d3240;
+}
+
+.content_paragraph {
+    padding: 95px 50px;
+    font-size: 1em;
+    opacity: 0.7;
+    width: 57%;
+    margin-bottom: 2.500em;
 }
