--- a/activities/activities.css
+++ b/activities/activities.css
@@ -262,7 +262,7 @@ body {
 
 .header_title {
     font-family: "Cambay";
-    font-size: 3.8em;
+    font-size: 5em;
     font-weight: 600;
     letter-spacing: .5px;
     color: #484141;
@@ -290,7 +290,7 @@ body {
     font-size: 1.275em;
     text-align: center;
     letter-spacing: .07px;
-    margin-top: .65em;
+    margin-top: 1em;
     animation-delay: .2s;
 }
 
@@ -327,51 +327,3 @@ body {
     margin-bottom: 2%;
 }
 
-/* Section Two and Video Styles  ------------------------------------------------  */
-
-.destination_post {
-    margin-top: 20vh;
-}
-
-.video_content-wrapper {
-    display: flex;
-    height:50vh;
-}
-
-.vid_content {
-    background: url('/assets/images/hero-image2.jpg');
-    background-position: b;
-    background-size: cover;
-    background-repeat: no-repeat;
-    width: 100%;
-}
-
-.video_link {
-    color: #fff;
-    font-family: "Cambay";
-    font-size: 3em;
-    font-weight: 800;
-    letter-spacing: 1px;
-    text-shadow: -2px 2px 1px #777;
-    text-decoration: none;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    z-index: 99;
-}
-
-/* content in video section Styles  ------------------------------------------------  */
-
-.content_right-wrapper {
-    width: 100%;
-    background-color: #2d3240;
-}
-
-.content_paragraph {
-    padding: 95px 50px;
-    font-size: 1em;
-    opacity: 0.7;
-    width: 57%;
-    margin-bottom: 2.500em;
-}
