--- a/activities/activities.css
+++ b/activities/activities.css
@@ -29,6 +29,10 @@ body {
     background-color: rgba(241, 237, 237, .6);
 }
 
+.filler {
+    height: 2000px;
+}
+
 /* Nav and logo wrapper styles ------------------------------------------------ */
 
 .main_nav {
@@ -49,9 +53,9 @@ body {
 }
 
 .logo_image {
-    height: 2.75em;
-    width: 2.75em;
-    border-radius: 100%;
+    height: 2.5em;
+    width: 2.5em;
+    border-radius: 5px;
     align-self: center;
     margin-right: 15px;
     filter: drop-shadow(-1px 1px 1px #000);
@@ -60,11 +64,11 @@ body {
 
 .logo_text {
     color: #fff;
+    font-family: 'Quicksand';
     font-weight: 700;
     display: inline;
-    font-size: 2em;
+    font-size: 1.5em;
     letter-spacing: 1.25px;
-    line-height: 1.5;
     align-self: center;
     text-shadow: -2px 2px 1px #000;
     z-index: 999;
@@ -327,3 +331,116 @@ body {
     margin-bottom: 2%;
 }
 
+
+/* Section Three Styles  ---------------- */
+
+.contact_section-wrapper {
+    color: #fff;
+    background-color: #00a8b3;
+    display: flex;
+    justify-content: center;
+    padding: 4% 25%;
+    margin-top: 40px;
+}
+
+.contact_wrapper {
+    text-align: center;
+}
+
+.contact_wrapper:nth-child(2) {
+    padding: 0px 12%;
+}
+
+
+.contact_heading {
+    font-size: 3em;
+    letter-spacing: 1.2px;
+    line-height: 1.2;
+}
+
+.contact_subtext {
+    text-align: center;
+}
+
+
+@media only screen and (max-width: 1340px) {
+    .contact_heading {
+        font-size: 2em;
+    }
+ }
+
+ @media only screen and (max-width: 915px) {
+    .contact_heading {
+        font-size: 1.3em;
+    }
+ }
+
+ @media only screen and (max-width: 600px) {
+    .contact_section-wrapper {
+        margin-top: 0;
+        padding: 7% 25%;
+    }
+ }
+
+ @media only screen and (max-width: 320px) {
+    .contact_heading {
+        font-size: 1em;
+    }
+
+    .contact_subtext {
+        font-size: .9em;
+        text-align: center;
+    }
+ }
+
+/* Footer and Social Icon Styles  ---------------- */
+
+.main_footer {
+    position: relative;
+    width: 100%;
+    background-color: #2d3240;
+    color: #fff;
+    padding: 2% 0;
+}
+
+.footer_nav {
+    display: flex;
+    justify-content: center;
+    text-align: center;
+}
+
+.footer_nav--list {
+    list-style: none;
+}
+
+.footer_nav--item {
+    color: #fff;
+    text-decoration: none;
+    text-align: center;
+}
+
+.footer_icon--list {
+    display: flex;
+    justify-content: center;
+}
+
+.footer_icon {
+    margin-top: 10px;
+    color: #299fb3;
+    font-size: 1.5em;
+}
+
+.fa-instagram {
+    padding: 0 7px;
+}
+
+.copyright {
+    text-align: center;
+    font-size: 75%;
+}
+
+@media only screen and (max-width: 600px) {
+    .main_footer {
+        padding: 5% 2%;
+    }
+ }
