--- a/subscribe/subscribe.css
+++ b/subscribe/subscribe.css
@@ -57,9 +57,9 @@ main {
 }
 
 .logo_image {
-    height: 2.75em;
-    width: 2.75em;
-    border-radius: 100%;
+    height: 2.5em;
+    width: 2.5em;
+    border-radius: 5px;
     align-self: center;
     margin-right: 15px;
     filter: drop-shadow(-1px 1px 1px #000);
@@ -69,10 +69,10 @@ main {
 .logo_text {
     color: #fff;
     font-weight: 700;
+    font-family: "quicksand";
     display: inline;
-    font-size: 2em;
+    font-size: 1.5em;
     letter-spacing: 1.25px;
-    line-height: 1.5;
     align-self: center;
     text-shadow: -2px 2px 1px #000;
     z-index: 999;
