created a new section

--- a/discover/discover.css
+++ b/discover/discover.css
@@ -331,6 +331,10 @@ body {
     margin-bottom: 2%;
 }
 
+/* Destination Section Styles  ---------------- */
+
+
+
 
 /* Section Three Styles  ---------------- */
 
