--- a/discover/discover.css
+++ b/discover/discover.css
@@ -24,9 +24,14 @@ body {
 
 /* backsplash Styles ------------------------------------------------  */
 
-.backsplash {
-    height: 17vh;
-    background-color: rgba(241, 237, 237, .6);
+.background-image {
+    height: 100vh;
+    width: 100%;
+    background: url(../assets/images/destinations/mtfuji.jpg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
 }
 
 .filler {
@@ -39,15 +44,19 @@ body {
     position: fixed;
     top: 0;
     color: #fff;
-    height: 6.250em;
+    height: 100px;
     width: 100%;
     z-index: 999;
     transition: .35s;
+}
+
+.main_nav.blue {
     background-color: rgba(35, 40, 55, 0.95);
+    height: 100px;
 }
 
 .logo_wrapper {
-    height: 6.250em;
+    height: 100px;
     margin-left: 14%;
     display: flex;
 }
@@ -80,7 +89,7 @@ body {
     position: fixed;
     top: 0;
     right: 0;
-    height: 6.250em;
+    height: 100px;
     width: 100%;
     margin-right: 14%;
 }
@@ -89,7 +98,7 @@ body {
     display: flex;
     align-items: center;
     float: right;
-    height: 6.7em;
+    height: 100px;
     font-size: .95em;
 }
 
@@ -259,47 +268,24 @@ body {
 .main_header {
     width: 85%;
     position: absolute;
-    top: 30vh;
+    top: 50vh;
     left: 50%;
     transform: translate(-50%, -50%);
 }
 
 .header_title {
     font-family: "Cambay";
-    font-size: 5em;
+    font-size: 6em;
     font-weight: 600;
     letter-spacing: .5px;
-    color: #484141;
+    color: #fff;
     width: 85vw;
     text-align: center;
+    text-shadow: -2px 2px 2px #000;
     line-height: 35px;
     animation-delay: .4s;
 }
-
-.header_title::after {
-    content: "";
-    display: block;
-    position: absolute;
-    height: 1px;
-    width: 100%;
-    background-color: rgba(100, 100, 100, 0.2);
-    z-index: -1;
-}
-
-.header_description {
-    text-transform: uppercase;
-    font-family: "Roboto";
-    font-weight: 900;
-    color: #e26f6f;
-    font-size: 1.275em;
-    text-align: center;
-    letter-spacing: .07px;
-    margin-top: 1em;
-    animation-delay: .2s;
-}
-
-
-
+        
 .section_labels {
     margin-top: 30vh;
 }
