--- a/food/food.css
+++ b/food/food.css
@@ -38,7 +38,7 @@ body {
     position: fixed;
     top: 0;
     color: #fff;
-    height: 6.250em;
+    height: 100px;
     width: 100%;
     z-index: 999;
     transition: .35s;
@@ -79,7 +79,7 @@ body {
     position: fixed;
     top: 0;
     right: 0;
-    height: 6.250em;
+    height: 100px;
     width: 100%;
     margin-right: 14%;
 }
@@ -88,7 +88,7 @@ body {
     display: flex;
     align-items: center;
     float: right;
-    height: 6.7em;
+    height: 100px;
     font-size: .95em;
 }
 
