--- a/index/index.css
+++ b/index/index.css
@@ -24,7 +24,7 @@ body {
 /* Hero Image Styles ------------------------------------------------  */
 
 .background-image {
-    background: url(/assets/images/hero.jpg);
+    background: url(/assets/images/hero1.jpg);
     height: 65vh;
     width: 100%;
     background-position: bottom;
@@ -75,7 +75,7 @@ body {
     position: fixed;
     top: 0;
     color: #fff;
-    height: 6.250em;
+    height: 100px;
     width: 100%;
     z-index: 999;
     transition: .35s;
@@ -83,11 +83,11 @@ body {
 
 .main_nav.blue {
     background-color: rgba(35, 40, 55, 0.95);
-    height: 6.250em;
+    height: 100px;
 }
 
 .logo_wrapper {
-    height: 6.250em;
+    height: 100px;
     margin-left: 14%;
     display: flex;
 }
@@ -119,7 +119,7 @@ body {
     position: fixed;
     top: 0;
     right: 0;
-    height: 6.250em;
+    height: 100px;
     width: 100%;
     margin-right: 14%;
 }
@@ -128,7 +128,7 @@ body {
     display: flex;
     align-items: center;
     float: right;
-    height: 6.7em;
+    height: 100px;
     font-size: .95em;
 }
 
