--- a/assets/styles/discover.css
+++ b/assets/styles/discover.css
@@ -22,6 +22,17 @@ body {
     width: 100%;
 }
 
+
+
+
+
+
+
+
+
+
+
+
 /* background image Styles ------------------------------------------------  */
 
 .background-image {
@@ -37,6 +48,12 @@ body {
 .filler {
     height: 2000px;
 }
+
+
+
+
+
+
 
 /* Nav and logo wrapper styles ------------------------------------------------ */
 
@@ -264,6 +281,24 @@ body {
     }
 }
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 /* Main Hero Wrapper and Heading Styles ---------------- */
 
 .main_header {
@@ -286,6 +321,17 @@ body {
     line-height: 35px;
     animation-delay: .4s;
 }
+
+
+
+
+
+
+
+
+
+
+/* Section labels styles ---------------- */
         
 .section_labels {
     margin-top: 30vh;
@@ -317,6 +363,19 @@ body {
     text-align: center;
     margin-bottom: 2%;
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 /* Destination Section Styles  ---------------- */
 
@@ -393,6 +452,74 @@ body {
     background-repeat: no-repeat;
     background-size: cover;
 }
+
+
+
+
+
+/* Activities Section Styles  ---------------- */
+
+.activities_section {
+    background-color: #fff;
+    margin: 3% 17%;
+}
+
+.activities_wrapper {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    justify-content: center;
+}
+
+.activities_post {
+    height: 290px;
+    width: inherit;
+    margin: 0.500em;
+    box-shadow: -2px 2px 40px 0 rgba(0, 0, 0, 0.18);
+    border-radius: 3px;
+}
+
+.activity-one {
+    grid-column: 1 / 3;
+    grid-row: 1 / 3;
+    height: 600px;
+    width: inherit;
+    margin-right: 0.500em;
+    background: url(../images/destinations/tokyo.jpg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.activity-two {
+    background: url(../images/destinations/kyoto.jpg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.activity-three {
+    background: url(../images/destinations/mtfuji.jpg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.activity-four {
+    background: url(../images/destinations/hiroshima.jpg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.activity-five {
+    background: url(../images/destinations/hokkaido.png);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+
 /* Footer and Social Icon Styles  ---------------- */
 
 .main_footer {
