added images and found content via lonely planet:

--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -945,7 +945,7 @@ body {
     }
 }
 
-/* Section Three Styles  ------------------------------------------------  */
+/* Contact Section Styles  ------------------------------------------------  */
 
 .contact_section-wrapper {
     color: #fff;
