--- a/assets/styles/discover.css
+++ b/assets/styles/discover.css
@@ -461,18 +461,18 @@ body {
 
 .activities_section {
     background-color: #fff;
-    margin: 3% 17%;
+    margin: 7% 17% 3%;
 }
 
 .activities_wrapper {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
     grid-template-rows: 1fr 1fr;
     justify-content: center;
 }
 
 .activities_post {
-    height: 290px;
+    height: 315px;
     width: inherit;
     margin: 0.500em;
     box-shadow: -2px 2px 40px 0 rgba(0, 0, 0, 0.18);
@@ -480,44 +480,171 @@ body {
 }
 
 .activity-one {
-    grid-column: 1 / 3;
+    grid-column: 3 / 6;
     grid-row: 1 / 3;
-    height: 600px;
+    height: 650px;
     width: inherit;
     margin-right: 0.500em;
-    background: url(../images/destinations/tokyo.jpg);
+    background: url(../images/activities/activity1.jpg);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
 }
 
 .activity-two {
-    background: url(../images/destinations/kyoto.jpg);
+    background: url(../images/activities/activity2.jpg);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
 }
 
 .activity-three {
-    background: url(../images/destinations/mtfuji.jpg);
+    background: url(../images/activities/activity3.jpg);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
 }
 
 .activity-four {
-    background: url(../images/destinations/hiroshima.jpg);
+    background: url(../images/activities/activity4.jpg);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
 }
 
 .activity-five {
-    background: url(../images/destinations/hokkaido.png);
+    background: url(../images/activities/activity5.jpg);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
 }
+
+
+/* Resturants section Styles  ---------------- */
+
+.resturants_section {
+    background-color: #fff;
+    margin: 7% 17% 3%;
+}
+
+.resturants_wrapper {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    justify-content: center;
+}
+
+.resturants_post {
+    height: 315px;
+    width: inherit;
+    margin: 0.500em;
+    box-shadow: -2px 2px 40px 0 rgba(0, 0, 0, 0.18);
+    border-radius: 3px;
+}
+
+.resturant-one {
+    grid-column: 1 / 3;
+    grid-row: 1 / 3;
+    height: 650px;
+    width: inherit;
+    margin-right: 0.500em;
+    background: url(../images/restaurants/sushidai.jpg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.resturant-two {
+    background: url(../images/restaurants/kawashimatofu.jpg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.resturant-three {
+    background: url(../images/restaurants/inua.jpg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.resturant-four {
+    background: url(../images/restaurants/kikunoi.jpg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.resturant-five {
+    background: url(../images/restaurants/tofuyaukai.jpg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+
+
+
+/* contact section Styles  ---------------- */
+
+.contact_section-wrapper {
+    color: #fff;
+    background-color: #00a8b3;
+    display: flex;
+    justify-content: center;
+    padding: 4% 25%;
+    margin-top: 40px;
+}
+
+.contact_wrapper {
+    text-align: center;
+}
+
+.contact_wrapper:nth-child(2) {
+    padding: 0px 12%;
+}
+
+
+.contact_heading {
+    font-size: 3em;
+    letter-spacing: 1.2px;
+    line-height: 1.2;
+}
+
+.contact_subtext {
+    text-align: center;
+}
+
+
+@media only screen and (max-width: 1340px) {
+    .contact_heading {
+        font-size: 2em;
+    }
+ }
+
+ @media only screen and (max-width: 915px) {
+    .contact_section-wrapper {
+        padding: 5% 25%;
+    }
+ }
+
+ @media only screen and (max-width: 600px) {
+    .contact_section-wrapper {
+        margin-top: 0;
+        padding: 7% 25%;
+    }
+ }
+
+ @media only screen and (max-width: 320px) {
+    .contact_heading {
+        font-size: 1em;
+    }
+
+    .contact_subtext {
+        font-size: .9em;
+        text-align: center;
+    }
+ }
 
 
 /* Footer and Social Icon Styles  ---------------- */
