--- a/assets/styles/discover.css
+++ b/assets/styles/discover.css
@@ -45,10 +45,15 @@ body {
     background-attachment: fixed;
 }
 
-.filler {
-    height: 2000px;
+.background-image::before {
+    content: '';
+    display: block;
+    background-color: #000;
+    height: 65vh;
+    opacity: 0.1;
+    width: 100%;
+    z-index: 1;
 }
-
 
 
 
@@ -329,8 +334,6 @@ body {
 
 
 
-
-
 /* Section labels styles ---------------- */
         
 .section_labels {
@@ -381,7 +384,7 @@ body {
 
 .destination_section {
     background-color: #fff;
-    margin: 3% 17%;
+    margin: 3% 25%;
 }
 
 .destination_wrapper {
@@ -461,7 +464,7 @@ body {
 
 .activities_section {
     background-color: #fff;
-    margin: 7% 17% 3%;
+    margin: 7% 25% 3%;
 }
 
 .activities_wrapper {
@@ -524,7 +527,7 @@ body {
 
 .resturants_section {
     background-color: #fff;
-    margin: 7% 17% 3%;
+    margin: 7% 25% 10%;
 }
 
 .resturants_wrapper {
@@ -585,6 +588,20 @@ body {
 
 
 
+
+
+/* subscribe section styles ---------------- */
+
+.subscribe_section {
+    background: url(../images/mtfuji.jpg);
+    height: 35vh;
+    width: 100%;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: bottom;
+    background-attachment: fixed;
+}
+
 /* contact section Styles  ---------------- */
 
 .contact_section-wrapper {
@@ -593,7 +610,6 @@ body {
     display: flex;
     justify-content: center;
     padding: 4% 25%;
-    margin-top: 40px;
 }
 
 .contact_wrapper {
