--- a/assets/styles/food.css
+++ b/assets/styles/food.css
@@ -331,6 +331,76 @@ body {
 }
 
 
+
+/* Resturants section Styles  ---------------- */
+
+.resturants_section {
+    background-color: #fff;
+    margin: 13% 25% 10%;
+}
+
+.resturants_wrapper {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    justify-content: center;
+}
+
+.resturants_post {
+    height: 315px;
+    width: inherit;
+    margin: 0.500em;
+    box-shadow: -2px 2px 40px 0 rgba(0, 0, 0, 0.18);
+    border-radius: 3px;
+}
+
+.resturant-one {
+    grid-column: 1 / 3;
+    grid-row: 1 / 3;
+    height: 650px;
+    width: inherit;
+    margin-right: 0.500em;
+    background: url(../images/restaurants/sushidai.jpg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.resturant-two {
+    background: url(../images/restaurants/kawashimatofu.jpg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.resturant-three {
+    background: url(../images/restaurants/inua.jpg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.resturant-four {
+    background: url(../images/restaurants/kikunoi.jpg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.resturant-five {
+    background: url(../images/restaurants/tofuyaukai.jpg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+
+
+
+
+
+
+
 /* Section Three Styles  ---------------- */
 
 .contact_section-wrapper {
