--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -34,6 +34,16 @@ body {
     z-index: -999999;
 }
 
+.background-image::before {
+    content: '';
+    display: block;
+    background-color: #000;
+    height: 65vh;
+    opacity: 0.09;
+    width: 100%;
+    z-index: 1;
+}
+
 @media only screen and (max-width: 1440px) and (max-height: 1400px) {
     .background-image {
         height: 100vh;
@@ -122,6 +132,7 @@ body {
     height: 100px;
     width: 100%;
     margin-right: 14%;
+    z-index: 99999;
 }
 
 .nav_list {
