--- a/assets/styles/discover.css
+++ b/assets/styles/discover.css
@@ -538,7 +538,7 @@ body {
     justify-content: center;
     height: 450px;
     width: 100%;
-    background: url(../images/divider/bridge-city-daylight-115603.jpg);
+    background: url(../images/divider/things.jpg);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
