--- a/assets/styles/discover.css
+++ b/assets/styles/discover.css
@@ -364,11 +364,16 @@ body {
  }
 
 
+ .post_title {
+    align-self: center;
+    text-align: center;
+}
 
 
-
-
-
+.post_link {
+    color: #fff;
+    text-decoration: none;
+}
 
 
 
@@ -408,15 +413,12 @@ body {
     width: inherit;
     color: #fff;
     text-decoration: none;
-}
-
-.destination_link {
-    color: #fff;
-    text-decoration: none;
+    text-shadow: -2px 2px 2px #000;
 }
 
 .destination_title {
-    align-self: center;
+    font-size: 1.8em;
+    text-shadow: -2px 2px 2px #111;
 }
 
 .destination_one {
@@ -505,17 +507,13 @@ body {
 }
 
 .main_activity-link {
-    grid-column: 1 / 3;
+    grid-column: 3 / 6;
     grid-row: 1 / 3;
     height: 600px;
     width: inherit;
     color: #fff;
     text-decoration: none;
-}
-
-.activity_link {
-    color: #fff;
-    text-decoration: none;
+    text-shadow: -2px 2px 2px #000;
 }
 
 .activity_one {
@@ -524,7 +522,7 @@ body {
     height: 650px;
     width: inherit;
     margin-right: 0.500em;
-    background: url(../images/activities/activity1.jpg);
+    background: url(../images/activities/activity.jpg);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
