--- a/assets/styles/discover.css
+++ b/assets/styles/discover.css
@@ -48,11 +48,6 @@ body {
     z-index: 1;
 }
 
-
-
-
-
-
 /* Nav and logo wrapper styles ------------------------------------------------ */
 
 .main_nav {
@@ -382,7 +377,7 @@ body {
 
 .destination_section {
     background-color: #fff;
-    margin: 3% 25%;
+    margin: 3% 17%;
 }
 
 .destination_wrapper {
@@ -395,6 +390,8 @@ body {
 .destination_post {
     height: 292px;
     width: inherit;
+    min-width: 200px;
+    max-width: 500px;
     margin: 0.500em;
     box-shadow: -2px 2px 40px 0 rgba(0, 0, 0, 0.18);
     border-radius: 3px;
@@ -410,15 +407,12 @@ body {
     grid-column: 1 / 3;
     grid-row: 1 / 3;
     height: 600px;
+    min-width: 450px;
+    max-width: 1200px;
     width: inherit;
     color: #fff;
     text-decoration: none;
     text-shadow: -2px 2px 2px #000;
-}
-
-.destination_title {
-    font-size: 1.8em;
-    text-shadow: -2px 2px 2px #111;
 }
 
 .destination_one {
@@ -426,11 +420,18 @@ body {
     grid-row: 1 / 3;
     height: 600px;
     width: inherit;
+    min-width: 450px;
+    max-width: 1200px;
     margin-right: 0.500em;
     background: url(../images/destinations/destination.jpg);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+}
+
+.destination_title {
+    font-size: 1.8em;
+    text-shadow: -2px 2px 2px #111;
 }
 
 .destination_two {
@@ -475,14 +476,40 @@ body {
     background-size: cover;
 }
 
+@media only screen and (max-width: 1760px) {
+    .destination_section {
+        margin: 3% 10%;
+    }
+}
 
+@media only screen and (max-width: 1460px) {
+    .destination_section {
+        margin: 3% 5%;
+    }
+}
 
+@media only screen and (max-width: 1300px) {
+    .destination_section {
+        margin: 3% 3%;
+    }
 
+    .destination_one {
+        min-width: 300px;
+    }
+
+    .destination_post {
+        min-width: 100px;
+    }
+}
+
+@media only screen and (max-width: 1200px) {
+  
+}
 /* Activities Section Styles  ---------------- */
 
 .activities_section {
     background-color: #fff;
-    margin: 7% 25% 7%;
+    margin: 7% 17% 7%;
 }
 
 .activities_wrapper {
@@ -497,6 +524,8 @@ body {
     grid-row: 1 / 3;
     height: 600px;
     width: inherit;
+    min-width: 450px;
+    max-width: 1200px;
     color: #fff;
     text-decoration: none;
     text-shadow: -2px 2px 2px #000;
@@ -521,6 +550,8 @@ body {
     grid-row: 1 / 3;
     height: 650px;
     width: inherit;
+    min-width: 450px;
+    max-width: 1300px;
     margin-right: 0.500em;
     background: url(../images/activities/activity.jpg);
     background-position: center;
@@ -556,56 +587,33 @@ body {
     background-size: cover;
 }
 
-
-/* Divider section Styles  ---------------- */
-
-.divider_section {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    height: 550px;
-    width: 100%;
-    background: url(../images/divider/things.jpg);
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-attachment: fixed;
-    border-bottom: 20px solid #e26f6f;
-    margin-bottom: 5.25%;
+@media only screen and (max-width: 1760px) {
+    .activities_section {
+        margin: 7% 10% 7%;
+    }
 }
 
-.divider_content {
-    text-align: center;
+@media only screen and (max-width: 1460px) {
+    .activities_section {
+        margin: 7% 5% 7%;
+    }
 }
 
-.divider_title {
-    font-size: 3em;
-    margin-bottom: 20px;
-    text-shadow: -1px 1px 1px #000;
+@media only screen and (max-width: 1300px) {
+    .activities_section {
+        margin: 7% 5% 7%;
+    }
 }
 
-.divider_button {
-    color: #fff;
-    font-size: 1em;
-    line-height: 1em;
-    text-decoration: none;
-    border: 1px solid #fff;
-    width: 100%;
-    padding: 12px 50px 7px;
-    transition: .3s;
-    border-radius: 5px;
-}
-
-.divider_button:hover {
-    background-color: #e26f6f;
-    border: 1px solid #e26f6f;
+@media only screen and (max-width: 1200px) {
+  
 }
 
 /* Resturants section Styles  ---------------- */
 
 .restaurants_section {
     background-color: #fff;
-    margin: 7% 25% 10%;
+    margin: 7% 17% 10%;
 }
 
 .restaurants_wrapper {
@@ -685,89 +693,66 @@ body {
     background-size: cover;
 }
 
-/* NightLife section Styles  ---------------- */
-
-.nightlife_section {
-    background-color: #fff;
-    margin: 7% 25% 10%;
+@media only screen and (max-width: 1760px) {
+    .restaurants_section {
+        margin: 7% 10% 10%;
+    }
 }
 
-.nightlife_wrapper {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr;
+@media only screen and (max-width: 1460px) {
+    .restaurants_section {
+        margin: 7% 5% 10%;;
+    }
+}
+
+@media only screen and (max-width: 1300px) {
+    .restaurants_section {
+        margin: 7% 3% 10%;
+    }
+}
+
+/* Divider section Styles  ---------------- */
+
+.divider_section {
+    display: flex;
+    flex-direction: column;
     justify-content: center;
-}
-
-.nightlife_post {
-    height: 315px;
-    width: inherit;
-    margin: 0.500em;
-    box-shadow: -2px 2px 40px 0 rgba(0, 0, 0, 0.18);
-    border-radius: 3px;
-    transition: .2s ease-in-out;
-}
-
-.nightlife_post:hover {
-    transform: scale(1.02);
-    transition: .2s ease-in-out;
-}
-
-.nightlife-one {
-    grid-column: 3 / 6;
-    grid-row: 1 / 3;
-    height: 650px;
-    width: inherit;
-    margin-right: 0.500em;
-    background: url(../images/restaurants/sushidai.jpg);
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-}
-
-.nightlife-two {
-    background: url(../images/restaurants/kawashimatofu.jpg);
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-}
-
-.nightlife-three {
-    background: url(../images/restaurants/inua.jpg);
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-}
-
-.nightlife-four {
-    background: url(../images/restaurants/kikunoi.jpg);
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-}
-
-.nightlife-five {
-    background: url(../images/restaurants/tofuyaukai.jpg);
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-}
-
-
-
-
-
-
-/* subscribe section styles ---------------- */
-
-.subscribe_section {
-    background: url(../images/mtfuji.jpg);
-    height: 35vh;
+    height: 550px;
     width: 100%;
-    background-size: cover;
+    background: url(../images/divider/things.jpg);
+    background-position: center;
     background-repeat: no-repeat;
-    background-position: bottom;
+    background-size: cover;
     background-attachment: fixed;
+    border-bottom: 20px solid #e26f6f;
+    margin-bottom: 5.25%;
+}
+
+.divider_content {
+    text-align: center;
+}
+
+.divider_title {
+    font-size: 3em;
+    margin-bottom: 20px;
+    text-shadow: -1px 1px 1px #000;
+}
+
+.divider_button {
+    color: #fff;
+    font-size: 1em;
+    line-height: 1em;
+    text-decoration: none;
+    border: 1px solid #fff;
+    width: 100%;
+    padding: 12px 50px 7px;
+    transition: .3s;
+    border-radius: 5px;
+}
+
+.divider_button:hover {
+    background-color: #e26f6f;
+    border: 1px solid #e26f6f;
 }
 
 /* contact section Styles  ---------------- */
